--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ body{
 	height: 100%;
 	width: 100%;
 	position: fixed;
+
+	overflow: hidden;
 }
 
 
@@ -732,6 +734,7 @@ AUDIO
 
 <div id="all_audio_container" style="display:none;">
 
+	<!--
 	<audio id="woman_audio_french" style="display:none;">
 		<source src="./audio/french_a_woman.mp3" type="audio/mpeg">
 	</audio>
@@ -744,6 +747,7 @@ AUDIO
 	<audio id="woman_audio_german" style="display:none;">
 		<source src="./audio/german_a_woman.mp3" type="audio/mpeg">
 	</audio>
+	-->
 
 	<!--
 	<div id="voiceover_container" style="display:none;"></div>
@@ -779,8 +783,8 @@ AUDIO
 	<audio id="german_two" class="german dont_stop_this_audio"><source src="./audio/interactive_audio/german/two.mp3" type="audio/mpeg"></audio>
  	-->
 
-	<audio id="product_sounds_correct" class="dont_stop_this_audio"><source src="./audio/interactive_audio/product_sounds/correct.mp3" type="audio/mpeg"></audio>
-	<audio id="product_sounds_incorrect" class="dont_stop_this_audio"><source src="./audio/interactive_audio/product_sounds/incorrect.mp3" type="audio/mpeg"></audio>
+	<!-- <audio id="product_sounds_correct" class="dont_stop_this_audio"><source src="./audio/interactive_audio/product_sounds/correct.mp3" type="audio/mpeg"></audio> -->
+	<!-- <audio id="product_sounds_incorrect" class="dont_stop_this_audio"><source src="./audio/interactive_audio/product_sounds/incorrect.mp3" type="audio/mpeg"></audio> -->
 
 	<audio id="voiceover_audio">
 		<source src="./audio/combined_audio/voiceover_audio.mp3" type="audio/mpeg">
@@ -1050,6 +1054,7 @@ PREP SCREENS
 </style>
 
 <div id="prep_images">
+	<!--
 	<img src="./demo_images/green_car.jpg">
 	<img src="./demo_images/blue_door.jpg">
 	<img src="./demo_images/green_bamboo.jpg">
@@ -1064,6 +1069,7 @@ PREP SCREENS
 	<img src="./demo_images/two_blueballs.jpg">
 	<img src="./demo_images/three_tennisballs.jpg">
 	<img src="./demo_images/two_bikers.jpg">
+	-->
 </div>
 
 <div id="prep_screen_1" class="table">
@@ -3203,6 +3209,7 @@ var words_audio = {
 	,'two' : {'french':[10,11], 'spanish':[11,12], 'italian':[11,12], 'german':[10,11]}
 	,'three' : {'french':[8,9], 'spanish':[9,10], 'italian':[9,10], 'german':[8,9]}
 	,'tap_image' : {'french':[11,14], 'spanish':[13,15], 'italian':[13,15], 'german':[12,14]}
+	,'woman' : {'french':[15,16], 'spanish':[16,17], 'italian':[16,17], 'german':[15,16]}
 }
 
 
@@ -3991,14 +3998,13 @@ PREP SECTION
 })();
 
 
-yb.id('prep_sound_on')['on'+touchstart] = function(e){
-	e.preventDefault();	
+// IMPORTANT: Need to use onclick because apple iOS9 dropped support for audio initiated by touchstart
+yb.id('prep_sound_on').onclick = function(){
 	toggle_volume(false);
 	go_to_prep_2();
 };
 
-yb.id('prep_sound_off')['on'+touchstart] = function(e){
-	e.preventDefault();	
+yb.id('prep_sound_off').onclick = function(){
 	toggle_volume(true);
 	go_to_prep_2();
 };
@@ -4007,6 +4013,36 @@ function initialize_audio(id){
 	document.getElementById(id).play();
 	document.getElementById(id).pause();
 }
+
+function preload_images(){
+	var img = [
+		'green_car.jpg',
+		'blue_door.jpg',
+		'green_bamboo.jpg',
+		'blue_feather.jpg',
+
+		'bicycle_redbricks.jpg',
+		'car_blueclassic.jpg',
+		'bicycle_andtree.jpg',
+		'car_sidewalk.jpg',
+
+		'three_bikes.jpg',
+		'two_blueballs.jpg',
+		'three_tennisballs.jpg',
+		'two_bikers.jpg'
+	];
+
+	var img_container = document.getElementById('prep_images');
+	var img_html = '';
+
+	for(var i=0; i<img.length; i++){
+		img_html += '<img src="./demo_images/'+img[i]+ '.jpg">';
+	}
+
+	document.getElementById('prep_images').innerHTML = img_html;
+}
+preload_images();
+
 
 function go_to_prep_2(){
 	initialize_audio('voiceover_audio');
@@ -4022,7 +4058,7 @@ function go_to_prep_2(){
 	},250);
 }
 
-yb.id('prep_continue')['on'+touchstart] = function(e){
+yb.id('prep_continue').onclick = function(e){
 	e.preventDefault();	
 	initialize_audio(selected_language + '_audio');
 
@@ -4558,17 +4594,27 @@ SELECT LANGUAGE SLIDE
 var language_buttons = yb.id('select_language_buttons').children;
 
 
-// bind fast clicks/touches to language buttons
+// bind clicks to language buttons (NEEDS TO BE ONCLICK TO LOAD AUDIO ON iOS because stupid update doesn't allow touchstart to play audio anymore)
 for(var i=0; i<language_buttons.length; i++){
 	
-	$(language_buttons[i]).on(touchstart, function(ev){
-		ev.preventDefault();
-		selected_language = this.getAttribute('data-lang'); // set language
+	language_buttons[i].onclick = function(ev){
+
+		var current_language = selected_language;
+		
+		// set language
+		selected_language = this.getAttribute('data-lang');
+
+		// if new language selected, preload correct audio
+		if(current_language!=selected_language){
+			var lang_audio_to_preload = document.getElementById(selected_language+'_audio');
+			lang_audio_to_preload.play();
+			lang_audio_to_preload.pause();
+		}
 
 		trigger_choose_language(); // tell analytics about language choice
 
 		go_to_slide[2]();
-	});
+	};
 }
 
 
@@ -4955,7 +5001,10 @@ function start_demo(){
 			// block clicks
 			ok_to_click_demo = false;
 
-			play_sound('product_sounds_correct',0,'exceptions');
+			// play_sound('product_sounds_correct',0,'exceptions');
+
+			// play "correct" sound
+			play_timed_audio('voiceover_audio',78,79);
 			smoothFadeIn('correct_check_svg',0.2,'inline-block');
 
 			// prepare the voiceover for the next slide now since it has to be directly triggered by a user input
@@ -4977,7 +5026,10 @@ function start_demo(){
 			}
 		}
 		else{
-			play_sound('product_sounds_incorrect',0,'exceptions');
+			// play_sound('product_sounds_incorrect',0,'exceptions');
+
+			// play "wrong" sound
+			play_timed_audio('voiceover_audio',80,81);
 			smoothFadeIn('wrong_x_svg',0.2,'inline-block',function(){ // show the x
 				setTimeout(function(){ smoothFadeOut('wrong_x_svg',0.2); },1000); // hide the x
 			});
@@ -5722,8 +5774,10 @@ $('#tap_image_box').on(touchstart, function(ev){
 		}
 		catch(e){}*/
 
-		// play audio
-		play_sound('woman_audio_'+[selected_language]);
+		// play "a woman" audio
+		// play_sound('woman_audio_'+[selected_language]);
+		var sprite = words_audio.woman[selected_language];
+		play_timed_audio(selected_language+'_audio', sprite[0], sprite[1]);
 		
 		// fade in and animate speech rec waves
 		yb.id('white_wave').style.opacity = 1;
@@ -6158,7 +6212,7 @@ function run_final_slide(){
 
 	// voiceover: this is the rosetta stone way
 	// play_voiceover('VO_ZMiller_RosettaStoneMobile_R_1_Graph_13');
-	play_timed_audio('voiceover_audio',72,87);
+	play_timed_audio('voiceover_audio',72,77);
 
 
 	// make sure all main elements start out hidden
@@ -6608,6 +6662,6 @@ if (typeof _satellite != 'undefined' ) {
 
 
 <!-- demo pixels -->
-<script src="http://www.rosettastone.com/lp/demoscript/demopixels.js"></script>
+<!-- <script src="http://www.rosettastone.com/lp/demoscript/demopixels.js"></script> -->
 </body>
 </html>
