--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,8 @@ PREP SCREENS
 		<button class="prep_button prep_button_selected" id="prep_sound_on">Sound ON</button>
 		<button class="prep_button" id="prep_sound_off">Sound OFF</button>
 		<div class="small_prep_text">
+			For optimal experience, turn sound on.
+			<br><br>
 			You may change this setting at any time.
 		</div>
 	</div>
@@ -2505,7 +2507,7 @@ MAIN DEMO CONTAINER
 									<br>the demo experience
 								</div>
 								
-								<a href="http://www.rosettastone.com/lp/mobile/sitewide/" id="end_get_started_button">Shop now</a>
+								<a href="http://www.rosettastone.com/lp/mobile/sitewide/" id="end_get_started_button">Get Started</a>
 							</div>
 						</div>
 					</div>
@@ -4001,6 +4003,9 @@ PREP SECTION
 	}
 })();
 
+// set default CTA url based on language
+document.getElementById('end_get_started_button').href = 'http://m.rosettastone.com/learn-'+selected_language+'/';
+
 
 // IMPORTANT: Need to use onclick because apple iOS9 dropped support for audio initiated by touchstart
 yb.id('prep_sound_on').onclick = function(){
@@ -4607,6 +4612,9 @@ for(var i=0; i<language_buttons.length; i++){
 		
 		// set language
 		selected_language = this.getAttribute('data-lang');
+
+		// set language of end cta button
+		document.getElementById('end_get_started_button').href = 'http://m.rosettastone.com/learn-'+selected_language+'/';
 
 		// if new language selected, preload correct audio
 		if(current_language!=selected_language){
